kubernetes/apps/whoami/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tailscale
spec:
  ingressClassName: tailscale

  defaultBackend:
    service:
      name: whoami
      port:
        name: http

  tls:
    - hosts:
        - whoami
